--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "raveren/kint": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
