--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "phpunit/php-code-coverage": "1.2.*"
+        "phpunit/php-code-coverage": "1.2.*",
+        "satooshi/php-coveralls": "0.6.x"
     },
     
     "autoload": {
