--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "phpunit/php-code-coverage": "1.2.*",
-        "satooshi/php-coveralls": "0.6.x"
+        "satooshi/php-coveralls": "0.6.x",
+        "symfony/dom-crawler": "~2.4.1",
+        "symfony/css-selector": "~2.4.1"
     },
     
     "autoload": {
