--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "phpunit/php-code-coverage": "1.2.*",
+        "phpunit/phpunit": "~4.0.2",
+        "phpunit/php-code-coverage": "~2.0.0",
         "satooshi/php-coveralls": "0.6.x",
         "symfony/dom-crawler": "~2.4.1",
         "symfony/css-selector": "~2.4.1"
