--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
 
     "require": {
         "php": ">=5.3.3",
-        "filp/whoops": "1.*"
+        "filp/whoops": "~1.0.10"
     },
 
     "require-dev": {
         "phpunit/phpunit": "~4.0.2",
         "phpunit/php-code-coverage": "~2.0.0",
-        "satooshi/php-coveralls": "0.6.x",
+        "satooshi/php-coveralls": "~0.6.1",
         "symfony/dom-crawler": "~2.4.1",
         "symfony/css-selector": "~2.4.1"
     },
